# js/as/external/api/gateway_pb.js
@@ -20,6 +20,8 @@ goog.exportSymbol('proto.api.Gateway', null, global);
 goog.exportSymbol('proto.api.GatewayBoard', null, global);
 goog.exportSymbol('proto.api.GatewayListItem', null, global);
 goog.exportSymbol('proto.api.GatewayStats', null, global);
+goog.exportSymbol('proto.api.GenerateGatewayClientCertificateRequest', null, global);
+goog.exportSymbol('proto.api.GenerateGatewayClientCertificateResponse', null, global);
 goog.exportSymbol('proto.api.GetGatewayRequest', null, global);
 goog.exportSymbol('proto.api.GetGatewayResponse', null, global);
 goog.exportSymbol('proto.api.GetGatewayStatsRequest', null, global);
@@ -1522,6 +1524,351 @@ proto.api.DeleteGatewayRequest.prototype.getId = function() {
 /** @param {string} value  */
 proto.api.DeleteGatewayRequest.prototype.setId = function(value) {
   jspb.Message.setField(this, 1, value);
+};
+
+
+
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.api.GenerateGatewayClientCertificateRequest = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, null, null);
+};
+goog.inherits(proto.api.GenerateGatewayClientCertificateRequest, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  proto.api.GenerateGatewayClientCertificateRequest.displayName = 'proto.api.GenerateGatewayClientCertificateRequest';
+}
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto suitable for use in Soy templates.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     com.google.apps.jspb.JsClassTemplate.JS_RESERVED_WORDS.
+ * @param {boolean=} opt_includeInstance Whether to include the JSPB instance
+ *     for transitional soy proto support: http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.api.GenerateGatewayClientCertificateRequest.prototype.toObject = function(opt_includeInstance) {
+  return proto.api.GenerateGatewayClientCertificateRequest.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Whether to include the JSPB
+ *     instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.api.GenerateGatewayClientCertificateRequest} msg The msg instance to transform.
+ * @return {!Object}
+ */
+proto.api.GenerateGatewayClientCertificateRequest.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    gatewayId: msg.getGatewayId()
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.api.GenerateGatewayClientCertificateRequest}
+ */
+proto.api.GenerateGatewayClientCertificateRequest.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.api.GenerateGatewayClientCertificateRequest;
+  return proto.api.GenerateGatewayClientCertificateRequest.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.api.GenerateGatewayClientCertificateRequest} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.api.GenerateGatewayClientCertificateRequest}
+ */
+proto.api.GenerateGatewayClientCertificateRequest.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setGatewayId(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Class method variant: serializes the given message to binary data
+ * (in protobuf wire format), writing to the given BinaryWriter.
+ * @param {!proto.api.GenerateGatewayClientCertificateRequest} message
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.GenerateGatewayClientCertificateRequest.serializeBinaryToWriter = function(message, writer) {
+  message.serializeBinaryToWriter(writer);
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.api.GenerateGatewayClientCertificateRequest.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  this.serializeBinaryToWriter(writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format),
+ * writing to the given BinaryWriter.
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.GenerateGatewayClientCertificateRequest.prototype.serializeBinaryToWriter = function (writer) {
+  var f = undefined;
+  f = this.getGatewayId();
+  if (f.length > 0) {
+    writer.writeString(
+      1,
+      f
+    );
+  }
+};
+
+
+/**
+ * Creates a deep clone of this proto. No data is shared with the original.
+ * @return {!proto.api.GenerateGatewayClientCertificateRequest} The clone.
+ */
+proto.api.GenerateGatewayClientCertificateRequest.prototype.cloneMessage = function() {
+  return /** @type {!proto.api.GenerateGatewayClientCertificateRequest} */ (jspb.Message.cloneMessage(this));
+};
+
+
+/**
+ * optional string gateway_id = 1;
+ * @return {string}
+ */
+proto.api.GenerateGatewayClientCertificateRequest.prototype.getGatewayId = function() {
+  return /** @type {string} */ (jspb.Message.getFieldProto3(this, 1, ""));
+};
+
+
+/** @param {string} value  */
+proto.api.GenerateGatewayClientCertificateRequest.prototype.setGatewayId = function(value) {
+  jspb.Message.setField(this, 1, value);
+};
+
+
+
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.api.GenerateGatewayClientCertificateResponse = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, null, null);
+};
+goog.inherits(proto.api.GenerateGatewayClientCertificateResponse, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  proto.api.GenerateGatewayClientCertificateResponse.displayName = 'proto.api.GenerateGatewayClientCertificateResponse';
+}
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto suitable for use in Soy templates.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     com.google.apps.jspb.JsClassTemplate.JS_RESERVED_WORDS.
+ * @param {boolean=} opt_includeInstance Whether to include the JSPB instance
+ *     for transitional soy proto support: http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.api.GenerateGatewayClientCertificateResponse.prototype.toObject = function(opt_includeInstance) {
+  return proto.api.GenerateGatewayClientCertificateResponse.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Whether to include the JSPB
+ *     instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.api.GenerateGatewayClientCertificateResponse} msg The msg instance to transform.
+ * @return {!Object}
+ */
+proto.api.GenerateGatewayClientCertificateResponse.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    tlsCert: msg.getTlsCert(),
+    tlsKey: msg.getTlsKey()
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.api.GenerateGatewayClientCertificateResponse}
+ */
+proto.api.GenerateGatewayClientCertificateResponse.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.api.GenerateGatewayClientCertificateResponse;
+  return proto.api.GenerateGatewayClientCertificateResponse.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.api.GenerateGatewayClientCertificateResponse} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.api.GenerateGatewayClientCertificateResponse}
+ */
+proto.api.GenerateGatewayClientCertificateResponse.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setTlsCert(value);
+      break;
+    case 2:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setTlsKey(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Class method variant: serializes the given message to binary data
+ * (in protobuf wire format), writing to the given BinaryWriter.
+ * @param {!proto.api.GenerateGatewayClientCertificateResponse} message
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.GenerateGatewayClientCertificateResponse.serializeBinaryToWriter = function(message, writer) {
+  message.serializeBinaryToWriter(writer);
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.api.GenerateGatewayClientCertificateResponse.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  this.serializeBinaryToWriter(writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format),
+ * writing to the given BinaryWriter.
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.GenerateGatewayClientCertificateResponse.prototype.serializeBinaryToWriter = function (writer) {
+  var f = undefined;
+  f = this.getTlsCert();
+  if (f.length > 0) {
+    writer.writeString(
+      1,
+      f
+    );
+  }
+  f = this.getTlsKey();
+  if (f.length > 0) {
+    writer.writeString(
+      2,
+      f
+    );
+  }
+};
+
+
+/**
+ * Creates a deep clone of this proto. No data is shared with the original.
+ * @return {!proto.api.GenerateGatewayClientCertificateResponse} The clone.
+ */
+proto.api.GenerateGatewayClientCertificateResponse.prototype.cloneMessage = function() {
+  return /** @type {!proto.api.GenerateGatewayClientCertificateResponse} */ (jspb.Message.cloneMessage(this));
+};
+
+
+/**
+ * optional string tls_cert = 1;
+ * @return {string}
+ */
+proto.api.GenerateGatewayClientCertificateResponse.prototype.getTlsCert = function() {
+  return /** @type {string} */ (jspb.Message.getFieldProto3(this, 1, ""));
+};
+
+
+/** @param {string} value  */
+proto.api.GenerateGatewayClientCertificateResponse.prototype.setTlsCert = function(value) {
+  jspb.Message.setField(this, 1, value);
+};
+
+
+/**
+ * optional string tls_key = 2;
+ * @return {string}
+ */
+proto.api.GenerateGatewayClientCertificateResponse.prototype.getTlsKey = function() {
+  return /** @type {string} */ (jspb.Message.getFieldProto3(this, 2, ""));
+};
+
+
+/** @param {string} value  */
+proto.api.GenerateGatewayClientCertificateResponse.prototype.setTlsKey = function(value) {
+  jspb.Message.setField(this, 2, value);
 };
 
 
